Move plugin name and description l10n to PluginManager

--- a/src/freenet/l10n/freenet.l10n.de.properties
+++ b/src/freenet/l10n/freenet.l10n.de.properties
@@ -1443,24 +1443,24 @@ PproxyToadlet.unloadPluginTitle=Plugin entfernen?
 PproxyToadlet.unloadPluginWithName=Sind Sie sicher, dass Sie das Plugin ${name} entfernen wollen?
 PproxyToadlet.unloadPurge=Plugin aus dem Cache entfernen
 PproxyToadlet.versionTitle=Version
-PproxyToadlet.pluginDesc.FlogHelper=Einfach zu verwendendes Werkzeug, um einen Blog im Freenet zu erstellen. Benötigt WebOfTrust.
-PproxyToadlet.pluginDesc.Freemail=Email über Freenet, benötigt ein Email-Programm, z.B. Thunderbird
-PproxyToadlet.pluginDesc.Freereader=Werkzeug für das automatische Einfügen von RSS- und ATOM-Feeds als Freesites
-PproxyToadlet.pluginDesc.Freetalk=Anonymes Chat-Forum über Freenet, benötigt "WebOfTrust"
-PproxyToadlet.pluginDesc.HelloFCP=FCP-Test-Plugin, macht nichts sinnvolles, nur für Entwickler von neuen Plugins
-PproxyToadlet.pluginDesc.HelloWorld=Test Plugin, macht nichts sinnvolles, nur für Entwickler von neuen Plugins
-PproxyToadlet.pluginDesc.JSTUN=JSTUN verwendet zentrale STUN-Server, um Ihre IP-Adresse zu erkennen. Für Freenet ist es wichtig, die eigene IP-Adresse zu kennen, speziell für das Darknet. Freenet könnte aber auch in der Lage sein, Ihre IP-Adresse mit Hilfe Ihrer Nachbarknoten zu erkennen, insbesondere, wenn Sie viele Verbindungen haben oder Opennet verwenden. STUN wird auch von anderen Programmen verwendet, aber STUN ist zentralisiert, deshalb kann es benutzt werden, um Ihren Knoten zu finden. Wenn möglich sollten Sie lieber UPnP verwenden. Nur wenn UPnP Ihre IP-Adresse nicht zuverlässig erkennen kann, dann laden Sie zusätzlich JSTUN.
-PproxyToadlet.pluginDesc.KeyUtils=Ein nützliches Werkzeug, um Freenet-Schlüssel zu untersuchen, z.B. die Seiten in einer Freesite aufzulisten.
-PproxyToadlet.pluginDesc.Library=Werkzeug um Freenet zu durchsuchen unter Verwendung des Freenet-Such-Indexes im alten oder neuen Format
-PproxyToadlet.pluginDesc.MDNSDiscovery=Macht Freenet auf Ihrem lokalen Netzwerk (LAN) bekannt, so dass andere Knoten sich automatisch mit Ihnen verbinden können, wird im Moment nicht häufig verwendet
-PproxyToadlet.pluginDesc.SNMP=Dies ermöglicht es Ihnen, den Status Ihres Freenet-Knotens mit Werkzeugen, wie z.B. MRTG, von anderen Computern aus zu überwachen.
-PproxyToadlet.pluginDesc.Spider=Ein Werkzeug, um Freesite-Such-Indexe im neuen Format zu erstellen und automatisch hochzuladen. Dazu werden alle Links aus Ihren Lesezeichen durchsucht und ihnen weiter gefolgt. Das verursacht eine hohe Last auf Ihrem Computer, benutzen Sie es deshalb nur, wenn er entsprechend ausgestattet ist! Zusätzlich muß das Plugin "Library" geladen sein.
-PproxyToadlet.pluginDesc.TestGallery=Einfaches Galerie-Seiten-Plugin, aktuell nicht verwendet
-PproxyToadlet.pluginDesc.ThawIndexBrowser=Hiermit können Sie Thaw-Datei-Indexe durchsuchen und davon Dateien herunterladen. Das funktioniert innerhalb der Freenet-Webschnitstelle, ohne dass dazu Thaw installiert werden müßte.
-PproxyToadlet.pluginDesc.UPnP=Kommuniziert mit Ihrem Router, um Ihre IP-Adresse zu finden und automatisch die entsprechenden UDP-Ports freizugeben, um die Geschwindigkeit zu verbessern. Sie sollten dies aktivieren, außer wenn Sie Ihrem LAN nicht trauen können. UPnP ist normalerweise sicher, im Unterschied zu JSTUN.
-PproxyToadlet.pluginDesc.WebOfTrust=Dies ermöglicht es Ihnen, eine anonyme Identität zu erstellen. Die Identitäten können einander vertrauen oder nicht und deshalb Spam und DoS Attacken vermeiden. Es wird von Freetalk und anderen Chat-Programmen und sozialen Netzwerken über Freenet verwendet.
-PproxyToadlet.pluginDesc.XMLLibrarian=Veraltetes Werkzeug für die Freesite-Such-Indexe im alten Format, siehe "Library"
-PproxyToadlet.pluginDesc.XMLSpider=Veraltetes Werkzeug für die Freesite-Such-Indexe im alten Format, siehe "Spider"
+PluginManager.pluginDesc.FlogHelper=Einfach zu verwendendes Werkzeug, um einen Blog im Freenet zu erstellen. Benötigt WebOfTrust.
+PluginManager.pluginDesc.Freemail=Email über Freenet, benötigt ein Email-Programm, z.B. Thunderbird
+PluginManager.pluginDesc.Freereader=Werkzeug für das automatische Einfügen von RSS- und ATOM-Feeds als Freesites
+PluginManager.pluginDesc.Freetalk=Anonymes Chat-Forum über Freenet, benötigt "WebOfTrust"
+PluginManager.pluginDesc.HelloFCP=FCP-Test-Plugin, macht nichts sinnvolles, nur für Entwickler von neuen Plugins
+PluginManager.pluginDesc.HelloWorld=Test Plugin, macht nichts sinnvolles, nur für Entwickler von neuen Plugins
+PluginManager.pluginDesc.JSTUN=JSTUN verwendet zentrale STUN-Server, um Ihre IP-Adresse zu erkennen. Für Freenet ist es wichtig, die eigene IP-Adresse zu kennen, speziell für das Darknet. Freenet könnte aber auch in der Lage sein, Ihre IP-Adresse mit Hilfe Ihrer Nachbarknoten zu erkennen, insbesondere, wenn Sie viele Verbindungen haben oder Opennet verwenden. STUN wird auch von anderen Programmen verwendet, aber STUN ist zentralisiert, deshalb kann es benutzt werden, um Ihren Knoten zu finden. Wenn möglich sollten Sie lieber UPnP verwenden. Nur wenn UPnP Ihre IP-Adresse nicht zuverlässig erkennen kann, dann laden Sie zusätzlich JSTUN.
+PluginManager.pluginDesc.KeyUtils=Ein nützliches Werkzeug, um Freenet-Schlüssel zu untersuchen, z.B. die Seiten in einer Freesite aufzulisten.
+PluginManager.pluginDesc.Library=Werkzeug um Freenet zu durchsuchen unter Verwendung des Freenet-Such-Indexes im alten oder neuen Format
+PluginManager.pluginDesc.MDNSDiscovery=Macht Freenet auf Ihrem lokalen Netzwerk (LAN) bekannt, so dass andere Knoten sich automatisch mit Ihnen verbinden können, wird im Moment nicht häufig verwendet
+PluginManager.pluginDesc.SNMP=Dies ermöglicht es Ihnen, den Status Ihres Freenet-Knotens mit Werkzeugen, wie z.B. MRTG, von anderen Computern aus zu überwachen.
+PluginManager.pluginDesc.Spider=Ein Werkzeug, um Freesite-Such-Indexe im neuen Format zu erstellen und automatisch hochzuladen. Dazu werden alle Links aus Ihren Lesezeichen durchsucht und ihnen weiter gefolgt. Das verursacht eine hohe Last auf Ihrem Computer, benutzen Sie es deshalb nur, wenn er entsprechend ausgestattet ist! Zusätzlich muß das Plugin "Library" geladen sein.
+PluginManager.pluginDesc.TestGallery=Einfaches Galerie-Seiten-Plugin, aktuell nicht verwendet
+PluginManager.pluginDesc.ThawIndexBrowser=Hiermit können Sie Thaw-Datei-Indexe durchsuchen und davon Dateien herunterladen. Das funktioniert innerhalb der Freenet-Webschnitstelle, ohne dass dazu Thaw installiert werden müßte.
+PluginManager.pluginDesc.UPnP=Kommuniziert mit Ihrem Router, um Ihre IP-Adresse zu finden und automatisch die entsprechenden UDP-Ports freizugeben, um die Geschwindigkeit zu verbessern. Sie sollten dies aktivieren, außer wenn Sie Ihrem LAN nicht trauen können. UPnP ist normalerweise sicher, im Unterschied zu JSTUN.
+PluginManager.pluginDesc.WebOfTrust=Dies ermöglicht es Ihnen, eine anonyme Identität zu erstellen. Die Identitäten können einander vertrauen oder nicht und deshalb Spam und DoS Attacken vermeiden. Es wird von Freetalk und anderen Chat-Programmen und sozialen Netzwerken über Freenet verwendet.
+PluginManager.pluginDesc.XMLLibrarian=Veraltetes Werkzeug für die Freesite-Such-Indexe im alten Format, siehe "Library"
+PluginManager.pluginDesc.XMLSpider=Veraltetes Werkzeug für die Freesite-Such-Indexe im alten Format, siehe "Spider"
 PproxyToadlet.pluginGroup.communication=Kommunikation
 PproxyToadlet.pluginGroup.connectivity=Verbindung
 PproxyToadlet.pluginGroup.example=Beispiele
