--- a/src/freenet/l10n/freenet.l10n.es.properties
+++ b/src/freenet/l10n/freenet.l10n.es.properties
@@ -1182,13 +1182,13 @@ PproxyToadlet.unloadPluginTitle=¿Desinstalar plugin?
 PproxyToadlet.unloadPluginWithName=¿Está seguro de que quiere desinstalar ${name}?
 PproxyToadlet.unloadPurge=Eliminar complemento del cache
 PproxyToadlet.versionTitle=Versión
-PproxyToadlet.pluginDesc.FlogHelper=Herramiente de uso fácil para crear un blog en Freenet. Necesita WebOfTrust.
-PproxyToadlet.pluginDesc.Freemail=Correo electrónico a través de Freenet. Requiere un cliente de correo electrónico (por ejemplo, Thunderbird).
-PproxyToadlet.pluginDesc.Freereader=Herramienta para insertar feeds RSS y ATOM como si fuesen freesites.
-PproxyToadlet.pluginDesc.HelloFCP=Plugin de test FCP. No hace nada útil, solo para desarrolladores de nuevos plugins.
-PproxyToadlet.pluginDesc.JSTUN=Usa servidores centralizados STUN para detectar tu dirección IP y conectividad. Es importante, especialmente en darknet, que Freenet conozca su IP (pero podrías ser capaz de obtenerla de tus pares, especialmente si tienes un montón de conexiones o estás usando opennet). STUN es utilizado por otras aplicaciones pero esto es centralizado por lo que podría ser usado para encontrar tu nodo. Mejor que uses UPnP si puedes, pero si UPnP no puede descubrir tu dirección IP de modo fiable, puedes cargar este complemento también.
-PproxyToadlet.pluginDesc.MDNSDiscovery=Publica Freenet en tu red local (LAN) para que los clientes puedan conectarse automáticamente. Actualmente no es muy utilizado.
-PproxyToadlet.pluginDesc.WebOfTrust=Te permite crear una identidad anónima. Esas identidades pueden confiar unas a las otras, o no, y por lo tanto evitar spam y ataques DoS. Es necesario para Freetalk y otros chats y aplicaciones sociales en Freenet.
+PluginManager.pluginDesc.FlogHelper=Herramiente de uso fácil para crear un blog en Freenet. Necesita WebOfTrust.
+PluginManager.pluginDesc.Freemail=Correo electrónico a través de Freenet. Requiere un cliente de correo electrónico (por ejemplo, Thunderbird).
+PluginManager.pluginDesc.Freereader=Herramienta para insertar feeds RSS y ATOM como si fuesen freesites.
+PluginManager.pluginDesc.HelloFCP=Plugin de test FCP. No hace nada útil, solo para desarrolladores de nuevos plugins.
+PluginManager.pluginDesc.JSTUN=Usa servidores centralizados STUN para detectar tu dirección IP y conectividad. Es importante, especialmente en darknet, que Freenet conozca su IP (pero podrías ser capaz de obtenerla de tus pares, especialmente si tienes un montón de conexiones o estás usando opennet). STUN es utilizado por otras aplicaciones pero esto es centralizado por lo que podría ser usado para encontrar tu nodo. Mejor que uses UPnP si puedes, pero si UPnP no puede descubrir tu dirección IP de modo fiable, puedes cargar este complemento también.
+PluginManager.pluginDesc.MDNSDiscovery=Publica Freenet en tu red local (LAN) para que los clientes puedan conectarse automáticamente. Actualmente no es muy utilizado.
+PluginManager.pluginDesc.WebOfTrust=Te permite crear una identidad anónima. Esas identidades pueden confiar unas a las otras, o no, y por lo tanto evitar spam y ataques DoS. Es necesario para Freetalk y otros chats y aplicaciones sociales en Freenet.
 PproxyToadlet.pluginGroup.communication=Comunicación
 PproxyToadlet.pluginGroup.connectivity=Conectividad
 PproxyToadlet.pluginGroup.example=Ejemplo
