--- a/src/freenet/l10n/freenet.l10n.it.properties
+++ b/src/freenet/l10n/freenet.l10n.it.properties
@@ -1269,24 +1269,24 @@ PproxyToadlet.unloadPluginTitle=Termina plugin?
 PproxyToadlet.unloadPluginWithName=Conferma terminazione ${name}?
 PproxyToadlet.unloadPurge=Rimuovi plugin da cache
 PproxyToadlet.versionTitle=Versione
-PproxyToadlet.pluginDesc.FlogHelper=Strumento semplice da usare per creare un blog su Freenet. Richiede WebOfTrust.
-PproxyToadlet.pluginDesc.Freemail=Email su Freenet. Richiede un client email (per es. Thunderbird)
-PproxyToadlet.pluginDesc.Freereader=Strumento per inserire feed RSS e ATOM come freesite.
-PproxyToadlet.pluginDesc.Freetalk=Forum di chat anonimi su Freenet. Richiede WebOfTrust.
-PproxyToadlet.pluginDesc.HelloFCP=Plugin di prova FCP. Non fà niente di utile, solo per sviluppatori di nuovi plugin.
-PproxyToadlet.pluginDesc.HelloWorld=Plugin di prova. Non fà niente di utile, solo per sviluppatori di nuovi plugin.
-PproxyToadlet.pluginDesc.JSTUN=Usa i server centralizzati STUN per individuare i vostri indirizzo IP e connettività. E` importante, specialmente su darknet, per Freenet sapere qual'è il vostro indirizzo IP. STUN è usato da altre applicazioni ma questo è centralizzato perciò potrebbe essere usato per trovare il vostro nodo.
-PproxyToadlet.pluginDesc.KeyUtils=Uno strumento utile per esaminare le chiavi di Freenet, per es. per elencare le pagine in un freesite.
-PproxyToadlet.pluginDesc.Library=Strumento per cercare su Freenet usando gli indici di ricerca di vecchio o nuovo formato.
-PproxyToadlet.pluginDesc.MDNSDiscovery=Annuncia Freenet sulla vostra rete locale (LAN) così che i client possano automaticamente connettervisi. Non molto utilizzato al momento.
-PproxyToadlet.pluginDesc.SNMP=Vi permette di monitorare in remoto lo stato del vostro nodo Freened tramite strumenti come MRTG.
-PproxyToadlet.pluginDesc.Spider=Strumento per creare e caricare automaticamente i freesite di nuovo formato di ricerca degli indici, seguendo automaticamente i collegamenti dai vostri segnalibri. Provoca un carico molto pesante sul vostro nodo Freened, non usatelo a meno che voi abbiate un computer potente! Richiede che sia caricato anche il plugin Library.
-PproxyToadlet.pluginDesc.TestGallery=Semplice pagina-galleria dei plugin, non attualmente utilizzati.
-PproxyToadlet.pluginDesc.ThawIndexBrowser=Vi fà vedere gli indici di Thaw, e scarica file da essi, da dentro l'interfaccia web di Freenet, senza dovere installare Thaw.
-PproxyToadlet.pluginDesc.UPnP=Comunica col vostro router per scoprire il vostro indirizzo IP e prova a inoltrare automaticamente le vostre porte UDP per migliorare la connettività. Dovreste abilitare questo a meno che non vi fidiate della vostra LAN.
-PproxyToadlet.pluginDesc.WebOfTrust=Vi permette di creare una identità anonima. Queste identità possono fidarsi l'una dell'altra, oppure no, e pertanto evitare spam e attacchi DoS. Terminale per Freetalk e altre applicazioni sociali e di chat su Freenet.
-PproxyToadlet.pluginDesc.XMLLibrarian=Strumento obsoleto per usare gli indici di ricerca dei freesite di vecchio formato. Vedere Library.
-PproxyToadlet.pluginDesc.XMLSpider=Strumento obsoleto per generare gli indici di ricerca dei freesite di vecchio formato. Vedere Spider.
+PluginManager.pluginDesc.FlogHelper=Strumento semplice da usare per creare un blog su Freenet. Richiede WebOfTrust.
+PluginManager.pluginDesc.Freemail=Email su Freenet. Richiede un client email (per es. Thunderbird)
+PluginManager.pluginDesc.Freereader=Strumento per inserire feed RSS e ATOM come freesite.
+PluginManager.pluginDesc.Freetalk=Forum di chat anonimi su Freenet. Richiede WebOfTrust.
+PluginManager.pluginDesc.HelloFCP=Plugin di prova FCP. Non fà niente di utile, solo per sviluppatori di nuovi plugin.
+PluginManager.pluginDesc.HelloWorld=Plugin di prova. Non fà niente di utile, solo per sviluppatori di nuovi plugin.
+PluginManager.pluginDesc.JSTUN=Usa i server centralizzati STUN per individuare i vostri indirizzo IP e connettività. E` importante, specialmente su darknet, per Freenet sapere qual'è il vostro indirizzo IP. STUN è usato da altre applicazioni ma questo è centralizzato perciò potrebbe essere usato per trovare il vostro nodo.
+PluginManager.pluginDesc.KeyUtils=Uno strumento utile per esaminare le chiavi di Freenet, per es. per elencare le pagine in un freesite.
+PluginManager.pluginDesc.Library=Strumento per cercare su Freenet usando gli indici di ricerca di vecchio o nuovo formato.
+PluginManager.pluginDesc.MDNSDiscovery=Annuncia Freenet sulla vostra rete locale (LAN) così che i client possano automaticamente connettervisi. Non molto utilizzato al momento.
+PluginManager.pluginDesc.SNMP=Vi permette di monitorare in remoto lo stato del vostro nodo Freened tramite strumenti come MRTG.
+PluginManager.pluginDesc.Spider=Strumento per creare e caricare automaticamente i freesite di nuovo formato di ricerca degli indici, seguendo automaticamente i collegamenti dai vostri segnalibri. Provoca un carico molto pesante sul vostro nodo Freened, non usatelo a meno che voi abbiate un computer potente! Richiede che sia caricato anche il plugin Library.
+PluginManager.pluginDesc.TestGallery=Semplice pagina-galleria dei plugin, non attualmente utilizzati.
+PluginManager.pluginDesc.ThawIndexBrowser=Vi fà vedere gli indici di Thaw, e scarica file da essi, da dentro l'interfaccia web di Freenet, senza dovere installare Thaw.
+PluginManager.pluginDesc.UPnP=Comunica col vostro router per scoprire il vostro indirizzo IP e prova a inoltrare automaticamente le vostre porte UDP per migliorare la connettività. Dovreste abilitare questo a meno che non vi fidiate della vostra LAN.
+PluginManager.pluginDesc.WebOfTrust=Vi permette di creare una identità anonima. Queste identità possono fidarsi l'una dell'altra, oppure no, e pertanto evitare spam e attacchi DoS. Terminale per Freetalk e altre applicazioni sociali e di chat su Freenet.
+PluginManager.pluginDesc.XMLLibrarian=Strumento obsoleto per usare gli indici di ricerca dei freesite di vecchio formato. Vedere Library.
+PluginManager.pluginDesc.XMLSpider=Strumento obsoleto per generare gli indici di ricerca dei freesite di vecchio formato. Vedere Spider.
 PproxyToadlet.startingPluginStatus.downloading=creazione copia locale in corso
 PproxyToadlet.startingPluginStatus.starting=Avvio in corso
 QueueToadlet.DUinProgress=Directory upload in corso
