--- a/src/freenet/l10n/freenet.l10n.ja.properties
+++ b/src/freenet/l10n/freenet.l10n.ja.properties
@@ -776,13 +776,13 @@ PproxyToadlet.unloadPluginTitle=プラグインをアンロードしますか?
 PproxyToadlet.unloadPluginWithName=${name}を本当にアンロードしますか?
 PproxyToadlet.unloadPurge=キャッシュからプラグインを除去する
 PproxyToadlet.versionTitle=バージョン
-PproxyToadlet.pluginDesc.FlogHelper=容易にFreenet上にブログを作成するツール。WebOfTrustが必要です。
-PproxyToadlet.pluginDesc.Freetalk=Freenet経由の匿名チャット。WebOfTrustが必要です。
-PproxyToadlet.pluginDesc.HelloWorld=テストプラグイン。なにも有用な事はなく、新たなプラグインの開発者向けです。
-PproxyToadlet.pluginDesc.KeyUtils=Freenetキーの試験(Freesite内のページをリストするなど)に有用なツール。
-PproxyToadlet.pluginDesc.TestGallery=簡素なギャラリーページプラグイン, 現在は使用されていません。
-PproxyToadlet.pluginDesc.ThawIndexBrowser=ThawファイルインデックスをFreenet WebインターフェースからThawをインストールすることなくブラウズできるようにします。
-PproxyToadlet.pluginDesc.UPnP=あなたのIPアドレスを発見し、接続性を向上する為にあなたのUDPポートを自動的にフォワードする為にあなたのルータと交信します。あなたのLANが信頼できないのでなければこれを有効にするべきです。これはJSTUNとは違って、たいてい安全です。
+PluginManager.pluginDesc.FlogHelper=容易にFreenet上にブログを作成するツール。WebOfTrustが必要です。
+PluginManager.pluginDesc.Freetalk=Freenet経由の匿名チャット。WebOfTrustが必要です。
+PluginManager.pluginDesc.HelloWorld=テストプラグイン。なにも有用な事はなく、新たなプラグインの開発者向けです。
+PluginManager.pluginDesc.KeyUtils=Freenetキーの試験(Freesite内のページをリストするなど)に有用なツール。
+PluginManager.pluginDesc.TestGallery=簡素なギャラリーページプラグイン, 現在は使用されていません。
+PluginManager.pluginDesc.ThawIndexBrowser=ThawファイルインデックスをFreenet WebインターフェースからThawをインストールすることなくブラウズできるようにします。
+PluginManager.pluginDesc.UPnP=あなたのIPアドレスを発見し、接続性を向上する為にあなたのUDPポートを自動的にフォワードする為にあなたのルータと交信します。あなたのLANが信頼できないのでなければこれを有効にするべきです。これはJSTUNとは違って、たいてい安全です。
 QueueToadlet.DinProgress=ダウンロード進捗中 (${size})
 QueueToadlet.bulkDownloadSelectOptionDisk=ディスクに
 QueueToadlet.completedDinDownloadDirectory=ダウンロードディレクトリへの完了したダウンロード （${size}）
