--- a/src/freenet/l10n/freenet.l10n.ru.properties
+++ b/src/freenet/l10n/freenet.l10n.ru.properties
@@ -1447,24 +1447,24 @@ PproxyToadlet.unloadPluginTitle=Отключить дополнение?
 PproxyToadlet.unloadPluginWithName=Вы действительно хотите отключить ${name}?
 PproxyToadlet.unloadPurge=Удалить дополнение из кэша
 PproxyToadlet.versionTitle=Версия
-PproxyToadlet.pluginDesc.FlogHelper=Простой в использовании инструмент для создания блогов Фринете. Зависит от WebOfTrust.
-PproxyToadlet.pluginDesc.Freemail=Электронная почта через Фринет. Для работы дополнения требуется почтовый клиент (например, Thunderbird).
-PproxyToadlet.pluginDesc.Freereader=Утилита для выгрузки лент новостей RSS и ATOM как фрисайтов.
-PproxyToadlet.pluginDesc.Freetalk=Экспериментальный форум для анонимного общения. Зависит от дополнения WebOfTrust.
-PproxyToadlet.pluginDesc.HelloFCP=Пробное дополнение FCP. Бесполезно и используется только разработчиками новых дополнений.
-PproxyToadlet.pluginDesc.HelloWorld=Пробное дополнение. Бесполезно и используется только разработчиками новых дополнений.
-PproxyToadlet.pluginDesc.JSTUN=Использует централизованные сервера STUN для того, чтобы определить ваш IP и свойства соединения. Фринету, особенно в режиме даркнет, важно знать ваш IP (но он может получить его у ваших соседей, особенно если у вас открыто множество подключений или вы пользуетесь опеннет). STUN предназначается для других приложенй, но так как он централизован, то может быть полезен для того чтобы найти ваш узел. Если вместо STUN вы можете использовать UPnP, воспользуйтесь им, но если UPnP не сможет надежно определить ваш IP, установите это дополнение.
-PproxyToadlet.pluginDesc.KeyUtils=Полезная утилита для анализа ключей Фринета, например для получения списка страниц фрисайта.
-PproxyToadlet.pluginDesc.Library=Утилита для поиска во Фринете с использованием поисковых индексов старого и нового форматов.
-PproxyToadlet.pluginDesc.MDNSDiscovery=Оповещает локальную сеть о том что на одном из компьютеров запущен Фринет, так что клиенты могут автоматически подключаться к нему. В настоящий момент почти не используется.
-PproxyToadlet.pluginDesc.SNMP=Позволяет удаленно отслеживать состояние узла Фринета с помощью таких инструментов, как MRTG.
-PproxyToadlet.pluginDesc.Spider=Утилита для создания и автоматической выгрузки индексов найденных фрисайтов в новом формате. Поиск фрисайтов осуществляется через автоматический переход по ссылкам во фрисайтах из ваших закладок, и приводит к очень высокой нагрузке на узел. Не включайте это дополнение, если у вас недостаточно мощный компьютер! Зависит от дополнения Library.
-PproxyToadlet.pluginDesc.TestGallery=Дополнение для создания галерей изображений, сейчас не используется.
-PproxyToadlet.pluginDesc.ThawIndexBrowser=Позволяет просматривать индексы Thaw и загружать из них файлы используя только веб-интерфейс Фринета, без установки Thaw.
-PproxyToadlet.pluginDesc.UPnP=Обменивается информацией с вашим роутером для определения вашего IP и пытается автоматически перебросить порты UDP Фринета для увеличения качества соединения. Дополнение должно быть установлено, за исключением тех случаев когда вы не доверяете своей локальной сети. Использование этого дополнения обычно безвредно, в отличие от JSTUN.
-PproxyToadlet.pluginDesc.WebOfTrust=Позволяет создавать анонимные идентификаторы. Пользователи идентификаторов могут доверять или не доверять друг другу, тем самым избегая спама и DoS-атак. Это дополнение служит основой для Freetalk и прочих приложений для общения во Фринете.
-PproxyToadlet.pluginDesc.XMLLibrarian=Устаревшее дополнение для использования поисковых индексов фрисайтов старого формата. См. Library.
-PproxyToadlet.pluginDesc.XMLSpider=Устаревшее дополнение для создания поисковых индексов фрисайтов старого формата. См. Spider.
+PluginManager.pluginDesc.FlogHelper=Простой в использовании инструмент для создания блогов Фринете. Зависит от WebOfTrust.
+PluginManager.pluginDesc.Freemail=Электронная почта через Фринет. Для работы дополнения требуется почтовый клиент (например, Thunderbird).
+PluginManager.pluginDesc.Freereader=Утилита для выгрузки лент новостей RSS и ATOM как фрисайтов.
+PluginManager.pluginDesc.Freetalk=Экспериментальный форум для анонимного общения. Зависит от дополнения WebOfTrust.
+PluginManager.pluginDesc.HelloFCP=Пробное дополнение FCP. Бесполезно и используется только разработчиками новых дополнений.
+PluginManager.pluginDesc.HelloWorld=Пробное дополнение. Бесполезно и используется только разработчиками новых дополнений.
+PluginManager.pluginDesc.JSTUN=Использует централизованные сервера STUN для того, чтобы определить ваш IP и свойства соединения. Фринету, особенно в режиме даркнет, важно знать ваш IP (но он может получить его у ваших соседей, особенно если у вас открыто множество подключений или вы пользуетесь опеннет). STUN предназначается для других приложенй, но так как он централизован, то может быть полезен для того чтобы найти ваш узел. Если вместо STUN вы можете использовать UPnP, воспользуйтесь им, но если UPnP не сможет надежно определить ваш IP, установите это дополнение.
+PluginManager.pluginDesc.KeyUtils=Полезная утилита для анализа ключей Фринета, например для получения списка страниц фрисайта.
+PluginManager.pluginDesc.Library=Утилита для поиска во Фринете с использованием поисковых индексов старого и нового форматов.
+PluginManager.pluginDesc.MDNSDiscovery=Оповещает локальную сеть о том что на одном из компьютеров запущен Фринет, так что клиенты могут автоматически подключаться к нему. В настоящий момент почти не используется.
+PluginManager.pluginDesc.SNMP=Позволяет удаленно отслеживать состояние узла Фринета с помощью таких инструментов, как MRTG.
+PluginManager.pluginDesc.Spider=Утилита для создания и автоматической выгрузки индексов найденных фрисайтов в новом формате. Поиск фрисайтов осуществляется через автоматический переход по ссылкам во фрисайтах из ваших закладок, и приводит к очень высокой нагрузке на узел. Не включайте это дополнение, если у вас недостаточно мощный компьютер! Зависит от дополнения Library.
+PluginManager.pluginDesc.TestGallery=Дополнение для создания галерей изображений, сейчас не используется.
+PluginManager.pluginDesc.ThawIndexBrowser=Позволяет просматривать индексы Thaw и загружать из них файлы используя только веб-интерфейс Фринета, без установки Thaw.
+PluginManager.pluginDesc.UPnP=Обменивается информацией с вашим роутером для определения вашего IP и пытается автоматически перебросить порты UDP Фринета для увеличения качества соединения. Дополнение должно быть установлено, за исключением тех случаев когда вы не доверяете своей локальной сети. Использование этого дополнения обычно безвредно, в отличие от JSTUN.
+PluginManager.pluginDesc.WebOfTrust=Позволяет создавать анонимные идентификаторы. Пользователи идентификаторов могут доверять или не доверять друг другу, тем самым избегая спама и DoS-атак. Это дополнение служит основой для Freetalk и прочих приложений для общения во Фринете.
+PluginManager.pluginDesc.XMLLibrarian=Устаревшее дополнение для использования поисковых индексов фрисайтов старого формата. См. Library.
+PluginManager.pluginDesc.XMLSpider=Устаревшее дополнение для создания поисковых индексов фрисайтов старого формата. См. Spider.
 PproxyToadlet.pluginGroup.communication=общения в сети
 PproxyToadlet.pluginGroup.connectivity=установки сетевых подключений
 PproxyToadlet.pluginGroup.example=разработчиков
