--- a/src/freenet/l10n/freenet.l10n.se.properties
+++ b/src/freenet/l10n/freenet.l10n.se.properties
@@ -711,13 +711,13 @@ PproxyToadlet.unloadPluginTitle=Stoppa plugin?
 PproxyToadlet.unloadPluginWithName=Vill du verkligen stoppa ${name}?
 PproxyToadlet.unloadPurge=Radera pluginen från cachen
 PproxyToadlet.versionTitle=Version
-PproxyToadlet.pluginDesc.FlogHelper=Lättanvänt verktyg för att skapa en blogg på Freenet. Kräver WebOfTrust.
-PproxyToadlet.pluginDesc.Freemail=E-post över Freenet. Kräver en e-post klient (t.ex. Thunderbird).
-PproxyToadlet.pluginDesc.Freereader=Verktyg för att ladda upp RSS och ATOM prenumerationer som freesiter.
-PproxyToadlet.pluginDesc.Freetalk=Anonyma diskussionsforum över Freenet. Kräver WebOfTrust.
-PproxyToadlet.pluginDesc.MDNSDiscovery=Annonserar Freenet på ditt lokala nätverk (LAN) så att klienter automatiskt kan ansluta till den. Används inte mycket för tillfället.
-PproxyToadlet.pluginDesc.UPnP=Pratar med din router för att upptäcka din IP-adress och försöka att automatiskt forwarda din UDP port för att förbättra anslutningsförmågan. Du ska ha detta aktiverat sålänge inte ditt LAN är otillförlitligt.
-PproxyToadlet.pluginDesc.WebOfTrust=Ger dig möjlighet att skapa en anonym identitet. Dessa identiteter kan lita på varandra, eller inte, och på så vis undvika spam och DoS attacker. Används av Freetalk och andra chat- och sociala applikationer över Freenet.
+PluginManager.pluginDesc.FlogHelper=Lättanvänt verktyg för att skapa en blogg på Freenet. Kräver WebOfTrust.
+PluginManager.pluginDesc.Freemail=E-post över Freenet. Kräver en e-post klient (t.ex. Thunderbird).
+PluginManager.pluginDesc.Freereader=Verktyg för att ladda upp RSS och ATOM prenumerationer som freesiter.
+PluginManager.pluginDesc.Freetalk=Anonyma diskussionsforum över Freenet. Kräver WebOfTrust.
+PluginManager.pluginDesc.MDNSDiscovery=Annonserar Freenet på ditt lokala nätverk (LAN) så att klienter automatiskt kan ansluta till den. Används inte mycket för tillfället.
+PluginManager.pluginDesc.UPnP=Pratar med din router för att upptäcka din IP-adress och försöka att automatiskt forwarda din UDP port för att förbättra anslutningsförmågan. Du ska ha detta aktiverat sålänge inte ditt LAN är otillförlitligt.
+PluginManager.pluginDesc.WebOfTrust=Ger dig möjlighet att skapa en anonym identitet. Dessa identiteter kan lita på varandra, eller inte, och på så vis undvika spam och DoS attacker. Används av Freetalk och andra chat- och sociala applikationer över Freenet.
 PproxyToadlet.startingPluginStatus.downloading=Laddar ner
 PproxyToadlet.startingPluginStatus.starting=startar
 QueueToadlet.DUinProgress=Pågående mapp uppladdningar
