--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1410,44 +1410,44 @@ PproxyToadlet.loadOtherPluginText=Here you can enter the filename or internet ad
 PproxyToadlet.loadOtherURLLabel=Plugin URL
 PproxyToadlet.noPlugins=No plugins loaded
 PproxyToadlet.noVersion=N/A
-PproxyToadlet.pluginDesc.Freemail=Old version (v0.1) of email over Freenet. Requires an email client (e.g. Thunderbird). The only reason to install this is if you want to talk to people using the old Freemail, since the new Freemail isn't compatible with the old Freemail. Note that you can have both loaded at the same time as they use different ports to talk to your email client.
-PproxyToadlet.pluginDesc.Freemail_wot=Email over Freenet. Requires the WebOfTrust plugin. Has a basic web interface, or you can use an email client; see FSNG for details on how to set this up.
-PproxyToadlet.pluginDesc.HelloWorld=Test plugin. Does nothing useful, only for developers of new plugins.
-PproxyToadlet.pluginDesc.HelloFCP=FCP test plugin. Does nothing useful, only for developers of new plugins.
-PproxyToadlet.pluginDesc.JSTUN=Uses centralised STUN servers to detect your IP address and connectivity. It is important, especially on darknet, for Freenet to know what your IP address is (but it may be able to pick it up from your peers, especially if you have a lot of connections or are using opennet). STUN is used by other applications but this is centralised so could be used to find your node. If you can use UPnP instead then do so, but if UPnP can't find your IP address reliably you could load this as well.
-PproxyToadlet.pluginDesc.KeyUtils=A useful tool for examining Freenet keys, e.g. to list the pages in a freesite.
-PproxyToadlet.pluginDesc.MDNSDiscovery=Announces Freenet on your local network (LAN) so that clients can automatically connect to it. Not used much at the moment.
-PproxyToadlet.pluginDesc.SNMP=Enables you to remotely monitor your Freenet node's status via tools such as MRTG.
-PproxyToadlet.pluginDesc.TestGallery=Simple gallery page plugin, not currently used.
-PproxyToadlet.pluginDesc.ThawIndexBrowser=Lets you browse Thaw file indexes, and download files from them, from within the Freenet web interface, without having to install Thaw.
-PproxyToadlet.pluginDesc.UPnP=Talks to your router to discover your IP address and try to automatically forward your UDP ports to improve connectivity. You should have this enabled unless your LAN is untrusted. This is usually safe, unlike JSTUN.
-PproxyToadlet.pluginDesc.XMLLibrarian=Obsolete tool to use old format freesite search indexes. See Library.
-PproxyToadlet.pluginDesc.XMLSpider=Obsolete tool to generate old format freesite search indexes. See Spider.
-PproxyToadlet.pluginDesc.Freereader=Tool to insert RSS and ATOM feeds as freesites.
-PproxyToadlet.pluginDesc.Library=Tool to search Freenet using old or new format search indexes.
-PproxyToadlet.pluginDesc.Spider=Tool to create and automatically upload new format freesite search indexes, by automatically following links from your bookmarks. Causes very heavy load on your Freenet node, don't use it unless you have a powerful computer! Requires that the Library plugin also be loaded.
-PproxyToadlet.pluginDesc.Freetalk=Experimental anonymous forum. Currently has severe performance and reliability problems. Requires WebOfTrust.
-PproxyToadlet.pluginDesc.WebOfTrust=Allows you to create an anonymous identity. These identities can trust each other, or not, and hence avoid spam and DoS attacks. Backend for chat and social applications over Freenet.
-PproxyToadlet.pluginDesc.FlogHelper=Easy to use tool for creating a blog on Freenet. Requires WebOfTrust.
-PproxyToadlet.pluginName.Freemail=Freemail v0.1 (old!)
-PproxyToadlet.pluginName.Freemail_wot=Freemail
-PproxyToadlet.pluginName.HelloWorld=HelloWorld
-PproxyToadlet.pluginName.HelloFCP=HelloFCP
-PproxyToadlet.pluginName.JSTUN=JSTUN
-PproxyToadlet.pluginName.KeyUtils=KeyUtils
-PproxyToadlet.pluginName.MDNSDiscovery=MDNSDiscovery
-PproxyToadlet.pluginName.SNMP=SNMP
-PproxyToadlet.pluginName.TestGallery=TestGallery
-PproxyToadlet.pluginName.ThawIndexBrowser=ThawIndexBrowser
-PproxyToadlet.pluginName.UPnP=UPnP
-PproxyToadlet.pluginName.XMLLibrarian=XMLLibrarian
-PproxyToadlet.pluginName.XMLSpider=XMLSpider
-PproxyToadlet.pluginName.Freereader=Freereader
-PproxyToadlet.pluginName.Library=Library
-PproxyToadlet.pluginName.Spider=Spider
-PproxyToadlet.pluginName.Freetalk=Freetalk
-PproxyToadlet.pluginName.WebOfTrust=WebOfTrust
-PproxyToadlet.pluginName.FlogHelper=FlogHelper
+PluginManager.pluginDesc.Freemail=Old version (v0.1) of email over Freenet. Requires an email client (e.g. Thunderbird). The only reason to install this is if you want to talk to people using the old Freemail, since the new Freemail isn't compatible with the old Freemail. Note that you can have both loaded at the same time as they use different ports to talk to your email client.
+PluginManager.pluginDesc.Freemail_wot=Email over Freenet. Requires the WebOfTrust plugin. Has a basic web interface, or you can use an email client; see FSNG for details on how to set this up.
+PluginManager.pluginDesc.HelloWorld=Test plugin. Does nothing useful, only for developers of new plugins.
+PluginManager.pluginDesc.HelloFCP=FCP test plugin. Does nothing useful, only for developers of new plugins.
+PluginManager.pluginDesc.JSTUN=Uses centralised STUN servers to detect your IP address and connectivity. It is important, especially on darknet, for Freenet to know what your IP address is (but it may be able to pick it up from your peers, especially if you have a lot of connections or are using opennet). STUN is used by other applications but this is centralised so could be used to find your node. If you can use UPnP instead then do so, but if UPnP can't find your IP address reliably you could load this as well.
+PluginManager.pluginDesc.KeyUtils=A useful tool for examining Freenet keys, e.g. to list the pages in a freesite.
+PluginManager.pluginDesc.MDNSDiscovery=Announces Freenet on your local network (LAN) so that clients can automatically connect to it. Not used much at the moment.
+PluginManager.pluginDesc.SNMP=Enables you to remotely monitor your Freenet node's status via tools such as MRTG.
+PluginManager.pluginDesc.TestGallery=Simple gallery page plugin, not currently used.
+PluginManager.pluginDesc.ThawIndexBrowser=Lets you browse Thaw file indexes, and download files from them, from within the Freenet web interface, without having to install Thaw.
+PluginManager.pluginDesc.UPnP=Talks to your router to discover your IP address and try to automatically forward your UDP ports to improve connectivity. You should have this enabled unless your LAN is untrusted. This is usually safe, unlike JSTUN.
+PluginManager.pluginDesc.XMLLibrarian=Obsolete tool to use old format freesite search indexes. See Library.
+PluginManager.pluginDesc.XMLSpider=Obsolete tool to generate old format freesite search indexes. See Spider.
+PluginManager.pluginDesc.Freereader=Tool to insert RSS and ATOM feeds as freesites.
+PluginManager.pluginDesc.Library=Tool to search Freenet using old or new format search indexes.
+PluginManager.pluginDesc.Spider=Tool to create and automatically upload new format freesite search indexes, by automatically following links from your bookmarks. Causes very heavy load on your Freenet node, don't use it unless you have a powerful computer! Requires that the Library plugin also be loaded.
+PluginManager.pluginDesc.Freetalk=Experimental anonymous forum. Currently has severe performance and reliability problems. Requires WebOfTrust.
+PluginManager.pluginDesc.WebOfTrust=Allows you to create an anonymous identity. These identities can trust each other, or not, and hence avoid spam and DoS attacks. Backend for chat and social applications over Freenet.
+PluginManager.pluginDesc.FlogHelper=Easy to use tool for creating a blog on Freenet. Requires WebOfTrust.
+PluginManager.pluginName.Freemail=Freemail v0.1 (old!)
+PluginManager.pluginName.Freemail_wot=Freemail
+PluginManager.pluginName.HelloWorld=HelloWorld
+PluginManager.pluginName.HelloFCP=HelloFCP
+PluginManager.pluginName.JSTUN=JSTUN
+PluginManager.pluginName.KeyUtils=KeyUtils
+PluginManager.pluginName.MDNSDiscovery=MDNSDiscovery
+PluginManager.pluginName.SNMP=SNMP
+PluginManager.pluginName.TestGallery=TestGallery
+PluginManager.pluginName.ThawIndexBrowser=ThawIndexBrowser
+PluginManager.pluginName.UPnP=UPnP
+PluginManager.pluginName.XMLLibrarian=XMLLibrarian
+PluginManager.pluginName.XMLSpider=XMLSpider
+PluginManager.pluginName.Freereader=Freereader
+PluginManager.pluginName.Library=Library
+PluginManager.pluginName.Spider=Spider
+PluginManager.pluginName.Freetalk=Freetalk
+PluginManager.pluginName.WebOfTrust=WebOfTrust
+PluginManager.pluginName.FlogHelper=FlogHelper
 PproxyToadlet.pluginFilename=Name
 PproxyToadlet.pluginGroup.communication=Communication
 PproxyToadlet.pluginGroup.connectivity=Connectivity
