Much better description for FSNG

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -126,7 +126,7 @@ Bookmarks.Defaults.ShortDescription.Publish=How to publish web sites on freenet
 Bookmarks.Defaults.ShortDescription.FreesiteHOWTO=Another guide to publishing a website to Freenet
 Bookmarks.Defaults.ShortDescription.Sone=Social chat over Freenet
 Bookmarks.Defaults.ShortDescription.freenetdocwiki=Freenet documentation wiki
-Bookmarks.Defaults.ShortDescription.FSNG=Social networking
+Bookmarks.Defaults.ShortDescription.FSNG=Step by step guide to how to set up anonymous email, chat etc on Freenet. Strongly recommended!
 Bookmarks.Defaults.ShortDescription.jSite=Essential tool for uploading websites to Freenet
 Bookmarks.Defaults.ShortDescription.Flog.Toad=Chief Freenet developer's personal blog
 Bookmarks.Defaults.ShortDescription.Flog.Bombe=Sone developer's personal blog
