--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -457,7 +457,7 @@ FileInsertWizardToadlet.insertIntro=There are several different ways to upload (
 FileInsertWizardToadlet.insertRandomTitle=Insert a random, safe key
 FileInsertWizardToadlet.insertRandom=This is much safer than the first option, but the key will be different every time you or somebody else inserts the key. Use this if you are the original source of some sensitive data.
 FileInsertWizardToadlet.insertSpecificKeyTitle=Specify a key
-FileInsertWizardToadlet.insertSpecificKey=If you know the exact key you want to insert to, please specify it here. If it is an SSK, USK or KSK, all the data under it will be encrypted randomly like with option 2.
+FileInsertWizardToadlet.insertSpecificKey=If you know the exact key you want to insert to, please specify it here. If it is an SSK, USK or KSK, all the data under it will be encrypted randomly as with "Insert a random, safe key".
 FileInsertWizardToadlet.splitfileCryptoKeyLabel=(optional) Splitfile encryption key (hex)
 FileInsertWizardToadlet.pageTitle=Upload a file to Freenet
 FirstTimeWizardToadlet.homepageTitle=Set Up Freenet
