--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -453,9 +453,11 @@ DownloadFeedUserAlert.title=${from} recommends you a file
 FileInsertWizardToadlet.filterFileLabel=You can run the content filter in advance to see what the uploaded file will look like:
 FileInsertWizardToadlet.insertCanonicalTitle=Insert a canonical key
 FileInsertWizardToadlet.insertCanonical=This will always produce the same key for the same file, so is convenient for filesharing. However, if the bad guys can predict what files you are going to insert, they may be able to use this to trace you a lot more easily.
+FileInsertWizardToadlet.insertCanonicalAdvanced=(Inserts to CHK@, with the encryption keys derived from the content)
 FileInsertWizardToadlet.insertIntro=There are several different ways to upload (insert) a file to Freenet depending on whether you have uploaded the file before and what your security requirements are:
 FileInsertWizardToadlet.insertRandomTitle=Insert a random, safe key
 FileInsertWizardToadlet.insertRandom=This is much safer than the first option, but the key will be different every time you or somebody else inserts the key. Use this if you are the original source of some sensitive data.
+FileInsertWizardToadlet.insertRandomAdvanced=(Inserts to a random SSK, with the encryption keys created randomly)
 FileInsertWizardToadlet.insertSpecificKeyTitle=Specify a key
 FileInsertWizardToadlet.insertSpecificKey=If you know the exact key you want to insert to, please specify it here. If it is an SSK, USK or KSK, all the data under it will be encrypted randomly as with "Insert a random, safe key".
 FileInsertWizardToadlet.splitfileCryptoKeyLabel=(optional) Splitfile encryption key (hex)
