Separate form and separate infobox for filter preview on Upload a File page, too messy/complex UI otherwise.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -460,6 +460,7 @@ FileInsertWizardToadlet.insertRandom=This is much safer than the first option, b
 FileInsertWizardToadlet.insertRandomAdvanced=(Inserts to a random SSK, with the encryption keys created randomly)
 FileInsertWizardToadlet.insertSpecificKeyTitle=Specify a key
 FileInsertWizardToadlet.insertSpecificKey=If you know the exact key you want to insert to, please specify it here. If it is an SSK, USK or KSK, all the data under it will be encrypted randomly as with "Insert a random, safe key".
+FileInsertWizardToadlet.previewFilterFile=Filter a file
 FileInsertWizardToadlet.splitfileCryptoKeyLabel=(optional) Splitfile encryption key (hex)
 FileInsertWizardToadlet.pageTitle=Upload a file to Freenet
 FirstTimeWizardToadlet.homepageTitle=Set Up Freenet
