--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -100,8 +100,8 @@ Bookmarks.Defaults.Name.categoryBlogs=Freenet team's blogs
 Bookmarks.Defaults.Description.TUFI=A one-page index with a menu including categories
 Bookmarks.Defaults.Description.AFK=An index of freenet sites with categories (outdated, use Enzo)
 Bookmarks.Defaults.Description.Enzo=An index of Freenet sites with categories
-Bookmarks.Defaults.Description.Linkageddon=A large, regularly updated index, linking to absolutely everything, including some very unpleasant sites. Some sites may not have accurate descriptions. Be careful!
-Bookmarks.Defaults.Description.Nerdageddon=Similar to Linkageddon but with some of the nastiest content removed, as well as a few sites the author considers boring
+Bookmarks.Defaults.Description.Linkageddon=A large, regularly updated index, linking to absolutely everything, including some very offensive sites. Some sites may not have accurate descriptions. Be careful!
+Bookmarks.Defaults.Description.Nerdageddon=Similar to Linkageddon but with the most offensive content removed, as well as dropping a few sites the author considers boring
 Bookmarks.Defaults.Description.ISF=A small French index with descriptions
 Bookmarks.Defaults.Description.FMS=The official freesite of FMS, a spam resistant message board system for Freenet
 Bookmarks.Defaults.Description.Freemail=The official site for Freemail - email over Freenet
@@ -114,8 +114,8 @@ Bookmarks.Defaults.Description.jSite=Tool for uploading freesites (Freenet websi
 Bookmarks.Defaults.Description.Flog.Toad=Toad's flog
 Bookmarks.Defaults.Description.Flog.Bombe=Bombe's flog
 Bookmarks.Defaults.Description.Flog.Xor=Flog of the main Freetalk & Web Of Trust developer
-Bookmarks.Defaults.ShortDescription.Linkageddon=Links to every Freenet website, sorted by when they were last updated, including some very nasty stuff. Be careful what you click on!
-Bookmarks.Defaults.ShortDescription.Nerdageddon=Similar to Linkageddon but with some of the nastiest content removed, as well as a few sites the author considers boring
+Bookmarks.Defaults.ShortDescription.Linkageddon=Links to every Freenet website, sorted by when they were last updated, including some very offensive sites. Be careful what you click on!
+Bookmarks.Defaults.ShortDescription.Nerdageddon=Similar to Linkageddon but with the most offensive content removed
 Bookmarks.Defaults.ShortDescription.AFK=Links to most Freenet web sites, sorted by category to make it easier to find what you want. (Outdated, use Enzo)
 Bookmarks.Defaults.ShortDescription.Enzo=Links to most Freenet web sites, sorted by category to make it easier to find what you want
 Bookmarks.Defaults.ShortDescription.TUFI=Older Freenet sites
