Localise FOAF second level locations table, and localise Location header in main table (in spite of it being Advanced)

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -325,10 +325,12 @@ DarknetConnectionsToadlet.confirmRemoveNodeTitle=Please confirm
 DarknetConnectionsToadlet.confirmRemoveNodeWarningTitle=Node Removal
 DarknetConnectionsToadlet.connected=Connected: We're successfully connected to these nodes
 DarknetConnectionsToadlet.connectedShort=Connected
+DarknetConnectionsToadlet.countTitle=Count
 DarknetConnectionsToadlet.darknetFnpPort=Darknet FNP: ${port}/UDP (used to connect to trusted peers i.e. Friends; forward this port if you can)
 DarknetConnectionsToadlet.disabled=Not connected and disabled: because you have instructed Freenet not to connect to these peers.
 DarknetConnectionsToadlet.disabledShort=Disabled
 DarknetConnectionsToadlet.enterDescription=Enter description:
+DarknetConnectionsToadlet.foafReachableThroughTitle=Reachable Through
 DarknetConnectionsToadlet.connError=Connection failed (buggy node?)
 DarknetConnectionsToadlet.routingDisabled=Not routing traffic (we are currently connected to the node but we or it refuse to route traffic)
 DarknetConnectionsToadlet.routingDisabledShort=Not routing traffic
@@ -358,6 +360,7 @@ DarknetConnectionsToadlet.listenOnly=Not connected and listen only: this node wo
 DarknetConnectionsToadlet.listenOnlyShort=Listen only
 DarknetConnectionsToadlet.listening=Not connected but listening: this node won't try to connect to these peers very often because the user has set BurstOnly on it.
 DarknetConnectionsToadlet.listeningShort=Listening
+DarknetConnectionsToadlet.locationTitle=Location
 DarknetConnectionsToadlet.myFriends=My Friends (trusted peers added by me)
 DarknetConnectionsToadlet.myReferenceHeader=${linkref}My Node Reference${/linkref} (${linktext}as text${/linktext})
 DarknetConnectionsToadlet.nameClickToMessage=The node's name. Click on the name link to send the node a N2NTM (Node To Node Text Message)
@@ -410,6 +413,10 @@ DarknetConnectionsToadlet.referenceCopyWarning=Node reference must be copied ${b
 DarknetConnectionsToadlet.remove=Remove it!
 DarknetConnectionsToadlet.removePeers=Remove selected peers
 DarknetConnectionsToadlet.returnToAddAFriendPage=Try again (return to the add a friend page)
+DarknetConnectionsToadlet.secondDegreeAlsoOurs=${count} locations likely also our peers (in bold)
+DarknetConnectionsToadlet.secondDegreeConnectionsCountTitle=${count} Second-Degree Connections
+DarknetConnectionsToadlet.secondDegreeTrivialHiddenCount=${count} non-overlapping connections potentially hidden
+DarknetConnectionsToadlet.secondDegreeNonTrivialCount=${count} reachable through more than one peer
 DarknetConnectionsToadlet.seedServers=Nodes we are using as seednodes.
 DarknetConnectionsToadlet.seedServersShort=Seed nodes
 DarknetConnectionsToadlet.seedClients=Nodes we are acting as a seednode for.
