Use more natural phrasing on enqueuing failure.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -1550,7 +1550,7 @@ QueueToadlet.downloadSucceededTitle=Download succeeded: ${filename}
 QueueToadlet.downloadsSucceededTitle=${nr} downloads succeeded
 QueueToadlet.downloadSucceeded=The file ${origlink}${filename}${/origlink} has been downloaded successfully. ${link}Click here${/link} to open the file (${size}).
 QueueToadlet.enqueuedSuccessfully=The following ${number} keys have been enqueued sucessfully:
-QueueToadlet.enqueuedFailure=The following ${number} keys couldn't have been enqueued:
+QueueToadlet.enqueuedFailure=The following ${number} keys could not be enqueued:
 QueueToadlet.errorAccessDenied=Error: Access Denied!
 QueueToadlet.errorAccessDeniedFile=Freenet's current configuration prohibits you from uploading the file "${file}".
 QueueToadlet.errorDToDisk=Cannot download to disk
