Refine clock problem message.
Try to make it clearer what's wrong, what the implications are, and what
to do about it.

--- a/src/freenet/l10n/freenet.l10n.en.properties
+++ b/src/freenet/l10n/freenet.l10n.en.properties
@@ -138,8 +138,8 @@ ChatForumsToadlet.fms=${fms}FMS${/fms} - The Freenet Message System is a message
 ChatForumsToadlet.fsng=${fsng}Freenet Social Networking Guide${/fsng} - This unofficial guide can be very helpful in setting up these and other Freenet communication tools.
 ChatForumsToadlet.sone=${sone}Sone${/sone} - A person and follower centered discussion-system. This is a plugin for Freenet. It requires the WebOfTrust plugin.
 ChatForumsToadlet.content2=The Freenet team did not write or review Frost, FMS, or Sone, so we cannot guarantee their quality. There are many other Freenet plugins and apps (such as wikis) which one can find by browsing Freenet.
-ClockProblemDetectedUserAlert.title=Your computer's clock isn't on time.
-ClockProblemDetectedUserAlert.text=Freenet has detected that your computer's clock (time and date) isn't on time. It won't work properly until you fix it and restart Freenet.
+ClockProblemDetectedUserAlert.title=Date and time problem
+ClockProblemDetectedUserAlert.text=Your computer's clock seems to be inaccurate. Freenet will not be able to connect to the network reliably. Please set your computer's clock to the correct date and time, then restart Freenet.
 ClockProblemDetectedUserAlert.shortText=Your computer's clock isn't on time, so Freenet can't connect.
 CSSTokenizerFilter.deletedDisallowedString=Deleted disallowed string
 CSSTokenizerFilter.deletedUnmatchedChar=ignored unmatched char:
